kubernetes/security/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: production-web-ingress
  namespace: production
spec:
  podSelector:
    matchLabels:
      app: production-web

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              access: production-web
      ports:
        - protocol: TCP
          port: 80
